[package]
name = "nvidiacenter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio= { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.14", features = ["default", "blocking", "json", "socks"]}
serde_json = "1.0.91"
[build-dependencies]
cc = "1"